# crown-flutter-crew

./: pyproject.toml  tembo.md
.tembo/: 01-dashboard-setup-checklist.md  04-agent-handoff.md  README.md
.tembo/automation-suite/: automation-suite.reference.yml
.tembo/automation-suite/prompts/: auto-fix-ci.md  daily-slack-changelog.md  pr-review.md  security-scan.md  sentry-auto-fix.md
.tembo/scripts/: render-placeholders.sh
src/crown_flutter_crew/: crew.py  main.py
src/crown_flutter_crew/config/: agents.yaml  tasks.yaml
