[project]
name = "crown-flutter-crew"
version = "1.0.0"
description = "Crown Flutter Mobile Crew - 1 Manager + 6 Workers, full lifecycle Flutter dev"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
